perf(backend): push in-memory aggregations into SQL; fix two correctness gaps
Replace findAll()/full-table-load + in-Java filtering with DB-side queries:
- PredictiveAnalyticsService: salary percentile + avg now use COUNT/aggregate
  queries instead of loading up to 50k SalaryStructure rows into heap.
- HomeService.getEmployeesOnLeaveToday: single findActiveByTenantIdAndStatusOnDate
  query — also FIXES a correctness gap where the old startDate-between-last-month
  window missed multi-month leaves that started earlier (e.g. parental leave).
- SlackCommandService.resolveTenantFromTeam: findByChannelAndSlackWorkspaceId
  derived query instead of findAll().stream().filter — avoids a full config scan.
- SurveyAnalyticsService: aggregate query for response stats.

Adds the supporting repository methods. Updates HomeServiceTest (status+date
filtering moved to SQL) and SlackCommandServiceTest (new resolver query) — 50
tests green.